[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/fonts/XS-7.font" type="BitmapFont" id=1]
[ext_resource path="res://gui/worldmap/typefilter.gd" type="Script" id=2]
[ext_resource path="res://gui/worldmap/icons/quest.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="mapfilter" type="ToolButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MAP_QUEST"
flat = true
align = 2
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="." index="0"]

self_modulate = Color( 0.572549, 0, 0, 1 )
texture = ExtResource( 3 )
centered = false

[connection signal="focus_entered" from="." to="." method="_on_mapfilter_focus_enter"]

[connection signal="focus_exited" from="." to="." method="_on_mapfilter_focus_exit"]

[connection signal="pressed" from="." to="." method="_on_mapfilter_pressed"]


